[package]
name = "blockstm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arc-swap = "1.7.1"
claims = "0.7"
concurrent-queue = "2.4.0"
crossbeam = "0.8.4"
dashmap = "5.5.3"
derivative = "2.2.0"
ethers-core = "2.0"
num_cpus = "1.16.0"
parking_lot = "0.12.0"
rand = "0.7.3"
revm = "7.1.0"
rayon = "1.9.0"

# example_utils
ethers-providers = { version = "2.0", optional = true }
tokio = { version = "1.36", features = [
    "rt-multi-thread",
    "macros",
], optional = true }
serde = { version = "1.0.197", features = ["derive"], optional = true }
scopeguard = "1.2.0"

[dev-dependencies]
ethers-contract = { version = "2.0.14", default-features = false }
anyhow = "1.0.80"
criterion = "0.5"
indicatif = "0.17"
serde_json = "1.0.115"


[features]
example_utils = [
    "tokio", 
    "ethers-providers", 
    "revm/ethersdb", 
    "revm/serde", 
    "serde"
    ]

[[example]]
name = "sequential"
path = "examples/sequential.rs"
required-features=["example_utils"]

[[example]]
name = "parallel"
path = "examples/parallel.rs"
required-features=["example_utils"]

[[example]]
name = "load_db"
path = "examples/load_db.rs"
required-features=["example_utils"]

[[example]]
name = "compare"
path = "examples/compare.rs"
required-features=["example_utils"]

[[example]]
name = "find_no_dependencies_block"
path = "examples/find_no_dependencies_block.rs"
required-features=["example_utils"]

